# dappl

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  asdfasdf.pl  asdfasdf2.pl  dappl.opam  dune-project  experiment.py  experiment.sh  init.sh  kick_the_tires.py  kick_the_tires.sh  new.bif  new2.bif  out.txt  run_experiments.py  run_experiments_bn.py  run_experiments_other.py  test.dappl  test.pl
derkinderen/: lfi_term.py  maxeu.py  ulearner.py
examples/: construct_decision.dappl  destruct_decision.dappl  discrete_test.dappl  fullmonty.dappl  loop_test.dappl  monty_test.dappl  nested.dappl  reward_test.dappl  single_decision.dappl  tests.dappl
experiments/: bn.py  bn_gen.ml  dappl_benchmarks.ml  dr.py  dune  framework.py  gen.ml  gridworld.py  insurance.bif.txt  insurance.pl  ladder.py  method.ml  mk_expr.ml  mk_expr_dt.ml  pp.ml  ppbif.py  ref.ref  thing.thing
experiments/bn/: alarm.dappl  earthquake.dappl
experiments/dtproblog_examples/: monty_hall.pl  umbrella.dappl  umbrella.pl  umbrella_cp.dappl
experiments/ladder/: ladder1.dappl  ladder1.pl  ladder10.dappl  ladder10_1.dappl  (+54 more)
lib/: README.md  anf.ml  bc.ml  core_grammar.ml  dune  lexer.mll  parser.mly  pp.ml  rsdd_abstractions.ml  syntax.ml  typechecker.ml  util.ml
numbers/: bn.csv  dr.csv  figs.ipynb  grid.csv  grid_dappl.csv  grid_derk.csv  grid_derk_ORIG.csv  grid_problog.csv  grid_test.csv  hmm.csv  ladder_2.csv  ladder_3.csv  ladder_4.csv  ladder_long.csv
test/: dune  mk_exprs.ml  test.ml
testgen/: README.md  create_grid.ml  dappl_benchmarks.ml  dune  gen.ml  mk_expr_dt.ml  ppbif.py
(+571 files in other folders)
